# backend-python-template

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/config/database/: db_connection.py
src/config/database/alembic/: env.py
src/config/database/alembic/versions/: 062206ff61b1_create_user_table.py  1d1eb762abab_create_projects_table.py  281f94016923_create_users_table.py  322e0883f22e_create_project_documents_table.py  362d850c96aa_create_user_table_v2.py  6221a911e623_alter_projects_table_relationships.py  85bfbc879310_create_projects_table.py  aaa1adc81636_create_project_members_table.py
src/config/database/seeders/: user_seed.py
src/config/env-files/: sample.env
src/middlewares/: authentication_middleware.py  validate_file_middleware.py
src/models/: project_documents_model.py  project_members_model.py  project_model.py  user_model.py
src/routes/: project_route.py  user_route.py
src/schemas/: index.py  projects.py  projects_schema.py  users_schema.py
src/services/: base_service.py  project_service.py  user_service.py
src/utils/: constants.py  exceptions.py  index.py  types.py
