[tool.poetry]
name = "backend-python-template"
version = "1.0.0"
description = "Python FastAPI with PostgreSQL Database"
authors = ["Anuj Raval"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"
requests = "^2.31.0"
alembic = "^1.13.1"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
typing = "3.7.4.3"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
sqlmodel = "^0.0.14"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^24.1.1"
isort = "^5.13.2"
autoflake = "^2.2.1"
flake8 = "^7.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
